@@ -7,6 +7,8 @@
   [#23932] Inconsistant DN handling in object attributes [Marc Dequènes]
   (ActiveLdap::Base#dn and ActiveLdap::Base#base return
   ActiveLdap::DN not String)
+* [#26824] support operational attributes detection [Marc Dequènes]
+  (added ActiveLdap::Schema::Attribute#directory_operation?)
 
 == 1.1.0: 2009-07-18
 
